--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -2,7 +2,9 @@
   text-align: center;
 }
 
-.WeatherForecast-temperature-min {
-  opacity: 0.6;
-  margin-left: 5px;
+.WeatherForecast hr {
+  color: #54b3a9;
+  padding: 1px;
+  opacity: 50%;
+  margin-top: 8px;
 }
